fix - Fixed Footer spacing and added more options

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,13 +1,12 @@
 .footer {
   color: #d9d9d9;
-  background-color: #323232;
+  background-color: #152850;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
-  padding: 20px 8vw;
-  padding-top: 80px;
-  margin-top: 100px;
+  padding: 8px 7vw;
+  padding-top: 50px;
+  margin-top: 60px;
 }
 .footer-content {
   width: 100%;
@@ -36,25 +35,25 @@
   color: white;
 }
 
-.footer-social-icons img{
-    width: 40px;
-    margin-right: 15px;
+.footer-social-icons img {
+  width: 40px;
+  margin-right: 15px;
 }
 
-.footer hr{
-    width: 100%;
-    height: 2px;
-    margin: 20px 0px;
-    background-color: gray;
-    border: none;
+.footer hr {
+  width: 100%;
+  height: 2px;
+  margin: 20px 0px;
+  background-color: gray;
+  border: none;
 }
-@media (max-width:750px) {
-  .footer-content{
+@media (max-width: 750px) {
+  .footer-content {
     display: flex;
     flex-direction: column;
     gap: 35px;
   }
-  .footer-copyright{
+  .footer-copyright {
     text-align: center;
   }
 }
